# AnkiGammon

./: .gitattributes  .gitignore  .gitlab-ci.yml  =6.6.0  CHANGELOG.md  CLAUDE.md  INTERACTIVE_MCQ_PLAN.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  ankigammon-gui.spec  ankigammon-mac.spec  ankigammon.spec  build_executable.bat  build_executable.sh  create_icon.py  flashgammon-gui.spec  flashgammon-mac.spec  flashgammon.spec  generate_color_samples.py  generate_icon.py  pyproject.toml  requirements.txt  run_gui.py  setup.py  test_gui.py  test_input_dialog.py  xg2anki-gui.spec  xg2anki-mac.spec  xg2anki.spec
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  theme-request.md
.github/workflows/: release.yml
ankigammon/: __init__.py  __main__.py  cli.py  interactive.py  models.py  settings.py
ankigammon/analysis/: move_score_matrix.py  score_matrix.py
ankigammon/anki/: ankiconnect.py  apkg_exporter.py  card_generator.py  card_styles.py  decision_serialize.py  deck_utils.py
ankigammon/gui/: __init__.py  app.py  deck_manager.py  deck_sync.py  format_detector.py  main_window.py  update_checker.py
ankigammon/parsers/: __init__.py  gnubg_match_parser.py  gnubg_parser.py  sgf_parser.py  xg_binary_parser.py  xg_text_parser.py
ankigammon/renderer/: animation_controller.py  animation_helper.py  color_schemes.py  svg_board_renderer.py
ankigammon/utils/: analyzer_base.py  gnubg_analyzer.py  gnuid.py  met.py  move_parser.py  ogid.py  subprocess_env.py  xg_analyzer.py  xgid.py
docs/: analysis_level_report.html
examples/: example_input.json  example_input.txt  example_xg_export.txt
flashgammon/: __init__.py  __main__.py  cli.py  interactive.py  models.py  settings.py
flashgammon/analysis/: __init__.py  score_matrix.py
flashgammon/anki/: __init__.py  ankiconnect.py  apkg_exporter.py  card_generator.py  card_styles.py
flashgammon/gui/: __init__.py  app.py  format_detector.py  main_window.py
flashgammon/parsers/: __init__.py  gnubg_parser.py  xg_text_parser.py
flashgammon/renderer/: __init__.py  animation_controller.py  animation_helper.py  svg_board_renderer.py
flashgammon/utils/: __init__.py  gnubg_analyzer.py  gnuid.py  move_parser.py  ogid.py  xgid.py
scripts/: build_analysis_level_report.py  classify_all_xgp.py  dump_xgp_fields.py  explore_xg_dialogs.py  generate_splash_png.py  qa_split_cube.py  verify_all_xgp_decisions.py  xg_dump_levels.py
tests/: test_analysis_level.py  test_basic.py  test_bearoff_pip_count_flip.py  test_decision_serialize.py  test_duplicate_xgid_detection.py  test_export_error_enrichment.py  test_external_subprocess_env.py  test_game_rules.py  test_gnubg_validation_worker.py  test_move_score_matrix.py  test_played_move_injection.py  test_resolve_player_flags.py  test_score_matrix.py  test_settings.py
xg2anki/: __init__.py  __main__.py  cli.py  interactive.py  models.py  settings.py
xg2anki/anki/: __init__.py  ankiconnect.py  apkg_exporter.py  card_generator.py  card_styles.py
xg2anki/gui/: __init__.py  app.py  format_detector.py  main_window.py
xg2anki/parsers/: __init__.py  gnubg_parser.py  xg_text_parser.py
xg2anki/renderer/: __init__.py  animation_controller.py  animation_helper.py  board_renderer.py  (+1 more)
(+32 files in other folders)
