[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ankigammon"
version = "1.4.0b9"
description = "Convert eXtreme Gammon backgammon analysis into Anki flashcards"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "AnkiGammon Contributors", email = "admin@ankigammon.com"},
]
keywords = ["anki", "flashcards", "backgammon", "extreme-gammon", "xg", "learning", "spaced-repetition"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # Core dependencies
    "genanki>=0.13.0",
    "requests>=2.31.0",
    "striprtf>=0.0.26",
    # GUI dependencies
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "qtawesome>=1.3.0",
    # XG automation (Windows only)
    'pywinauto>=0.6.9; sys_platform == "win32"',
    'pyautogui>=0.9.54; sys_platform == "win32"',
    # Python < 3.9 compatibility
    'backports.zoneinfo; python_version < "3.9"',
]

[project.urls]
Homepage = "https://github.com/Deinonychus999/AnkiGammon"
Repository = "https://github.com/Deinonychus999/AnkiGammon"
Documentation = "https://github.com/Deinonychus999/AnkiGammon#readme"
Issues = "https://github.com/Deinonychus999/AnkiGammon/issues"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "bump-my-version>=0.28.0",
]

[project.gui-scripts]
ankigammon = "ankigammon.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ankigammon*"]

[tool.setuptools.package-data]
ankigammon = [
    "gui/resources/*",
]

# Version bumping configuration
# Usage: bump-my-version patch|minor|major
# Pre-release: bump-my-version bump --new-version 1.4.0b1
# Next beta:   bump-my-version bump pre_n  (→ 1.4.0b2)
# Release:     bump-my-version bump --new-version 1.4.0
[tool.bumpversion]
current_version = "1.4.0b9"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Increase version to {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<pre_l>a|b|rc)(?P<pre_n>\\d+))?"
serialize = [
    "{major}.{minor}.{patch}{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]

[tool.bumpversion.parts.pre_l]
optional_value = "release"
values = ["a", "b", "rc", "release"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ankigammon/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "ankigammon.spec"
search = "'CFBundleShortVersionString': '{current_version}'"
replace = "'CFBundleShortVersionString': '{new_version}'"
